<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2015 The CyanogenMod Project
               2017 The LineageOS Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_system">
        <org.lineageos.device.VibratorStrengthPreference
            android:key="vib_strength"
            android:title="@string/vib_strength_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/category_display">
        <PreferenceScreen
                 android:key="kcal"
                 android:fragment="org.lineageos.device.DisplayCalibration"
                 android:summary="@string/kcal_summary"
                 android:title="@string/kcal_title" />
        <Preference
            android:key="device_doze"
            android:persistent="false"
            android:summary="@string/ambient_display_title_summary"
            android:title="@string/ambient_display_title" >
            <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="org.lineageos.settings.doze"
                 android:targetClass="org.lineageos.settings.doze.DozeSettingsActivity"/>
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/category_kernel" >

        <ListPreference
            android:key="spectrum"
            android:title="@string/kernel_profile_title"
            android:summary="@string/kernel_profile_summary"
            android:defaultValue="0"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:dialogTitle="@string/kernel_profile_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/s2s_title">
        <ListPreference
            android:title="@string/s2s_title"
            android:summary="@string/s2s_summary"
            android:key="sweep2sleep"
            android:defaultValue="0"
            android:entries="@array/s2sArray"
            android:entryValues="@array/s2sValues" />
         <org.lineageos.device.S2SVibratorStrengthPreference
            android:key="s2s_vib_strength"
            android:title="@string/s2s_vib_strength_title"
            android:summary="@string/s2s_vibration_summary" />
    </PreferenceCategory>

</PreferenceScreen>
